fix overlapping google map container

--- a/frontend/src/components/party/form/party_form.css
+++ b/frontend/src/components/party/form/party_form.css
@@ -32,3 +32,26 @@
 .party-form {
   margin-left: 50px;
 }
+
+.submit-btn {
+  color: #ff8f1f;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: right;
+  width: 180px;
+  margin-top: 50px;
+  height: 35px;
+  border-radius: 30px;
+  font-size: 18px;
+  font-weight: 700;
+  transition: 0.2s;
+}
+
+.submit-btn:hover {
+  background-color: #ff8f1f;
+  color: white;
+  box-shadow: 0px 0px 10px 3px #ff8f1fb0;
+  transition: 0.2s;
+}
